# lume-mans

./: .gitignore  .prettierrc  LICENSE  README.md  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.tauri.json
app/: app.config.ts  app.vue
app/assets/css/: main.css
app/components/: CaptureToggle.vue  FlagEvent.vue  IntervalSlider.vue  SessionTimer.vue  StatusOverrideButton.vue  TrackStatus.vue  VideoInputMenu.vue
app/composables/: useErrors.ts  useMetrics.ts  useSessionTime.ts  useTrackStatus.ts  useVideoInputs.ts
app/pages/: index.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/jcap/: Cargo.toml  README.md
src-tauri/jcap/src/: lib.rs  main.rs
src-tauri/jcap/src/capturer/: mod.rs
src-tauri/jcap/src/capturer/engine/: mod.rs
src-tauri/jcap/src/capturer/engine/linux/: mod.rs  portal.rs
src-tauri/jcap/src/capturer/engine/mac/: mod.rs  pixel_buffer.rs
src-tauri/jcap/src/capturer/engine/win/: mod.rs
src-tauri/jcap/src/frame/: audio.rs
src-tauri/jcap/src/targets/: mod.rs
src-tauri/jcap/src/targets/mac/: mod.rs
src-tauri/jcap/src/targets/win/: mod.rs
src-tauri/jcap/src/utils/: mod.rs
src-tauri/jcap/src/utils/linux/: mod.rs
src-tauri/jcap/src/utils/win/: mod.rs
src-tauri/src/: commands.rs  detection.rs  lib.rs  main.rs
src-tauri/src/detection/: source.rs  state.rs  state_machine.rs  video.rs
src-tauri/src/detection/video/: optimized_ocr.rs  video_source.rs  video_state_machine.rs
src-tauri/src/lighting/: command.rs  controller.rs
