[package]
name = "lume-mans"
version = "0.4.0"
description = "Live track status monitoring and lighting cues for the 24 Hours of Le Mans"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lume_mans_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
resolver = "3"
members = ["jcap"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.102"
ocrs = "0.12.2"
rten = "0.24.0"
tokio = { version = "1.52.3", features = ["time"] }
regex = "1.12.3"
jcap = { path = "jcap" }
image = "0.25.10"
reqwest = "0.13.4"
rten-imageproc = "0.24.0"
